GPB-76 Components header, footer, layout

--- a/packages/frontend/src/styles/reset.sass
+++ b/packages/frontend/src/styles/reset.sass
@@ -10,7 +10,7 @@ body
   margin: 0
   scrollbar-width: none
   font-size: 16px
-  @include fontStyles("regular")
+  @include fontStyles(regular)
   @include mq("small")
     font-size: 14px
 
@@ -20,19 +20,19 @@ body
   min-height: 100vh
 
 h1 
-  20px
+  font-size: 20px
 
 h2
-  18px
+  font-size: 18px
 
 h3
-  16px
+  font-size: 16px
 
 button
-  18px 
+  font-size: 18px 
     
 .subtitle
-  12px
+  font-size: 12px
 
 .slogan
-  10px
+  font-size: 10px
