GBP-76 storybook fix

--- a/packages/frontend/src/app/components/list-components/footer-links-area/footerLinksArea.module.sass
+++ b/packages/frontend/src/app/components/list-components/footer-links-area/footerLinksArea.module.sass
@@ -2,6 +2,7 @@
   
 .footerLinks
   display: none
+  font-size: 18px
 
   @include mq("medium")
     display: initial
@@ -14,14 +15,3 @@
     padding: 0
     list-style: none
     line-height: 1.5
-
-  &_item
-    
-    & a
-      color: inherit
-      text-decoration: none
-      display: flex
-      flex-wrap: none
-      align-items: center
-    & img
-      padding: 4px
