--- a/packages/frontend/src/app/components/inputs/pass-input/passInput.module.sass
+++ b/packages/frontend/src/app/components/inputs/pass-input/passInput.module.sass
@@ -5,7 +5,7 @@ $border-rounded:40px
 
 .pass
   background: white
-  width: 360px
+  width: calc(360px - 1rem - 20px)
   height: $barSize
   display: flex
   align-items: center
