GBP-57 Auth components

--- a/packages/frontend/src/app/components/auth-components/register-form/registerForm.module.sass
+++ b/packages/frontend/src/app/components/auth-components/register-form/registerForm.module.sass
@@ -1,6 +1,6 @@
 /* Device=Desktop, Page=Login, State=Default */
 @use "../../../styles/variables" as *
-.loginForm
+.contentForm
   display: flex
   flex-direction: column
   justify-content: center
@@ -23,10 +23,6 @@
     display: flex
     flex-direction: column
     gap: 15px
-
-  &_error
-    padding: 2px 0
-    height: 17px
 
   &_politics
     display: flex
