--- a/packages/frontend/src/app/ui/inputs/check-input/checkInput.module.sass
+++ b/packages/frontend/src/app/ui/inputs/check-input/checkInput.module.sass
@@ -1,7 +1,7 @@
 .checkbox
   display: flex
   align-items: center
-  gap: 0.25rem
+  gap: 7px
   &_input
     position: relative
     appearance: none
