--- a/packages/frontend/src/app/ui/buttons/basicButton/basicButton.module.sass
+++ b/packages/frontend/src/app/ui/buttons/basicButton/basicButton.module.sass
@@ -37,7 +37,7 @@
   color: white
   transition: background 200ms ease-in-out
   &:hover
-    background: $button-color-red
+    background: $secondary-red
 
 .reverse
   flex-direction: row-reverse
