GPB-57 - Adding validation formik

--- a/packages/frontend/src/app/routes/home/home.module.sass
+++ b/packages/frontend/src/app/routes/home/home.module.sass
@@ -1,4 +1,7 @@
 .home
-  height: 500px
+  height: 100%
   width: 100%
-  background: red
+  display: flex
+  justify-content: center
+  align-items: center
+  flex: 1
