--- a/packages/frontend/src/app/components/auth-components/login-form/loginForm.module.sass
+++ b/packages/frontend/src/app/components/auth-components/login-form/loginForm.module.sass
@@ -8,9 +8,10 @@
   align-items: center
   gap: 15px
   padding: 50.5px 20px
-  width:360px 
+  width: 360px
   background: #FFFFFF
   border-radius: 10px
+
   @include mq("small")
     padding: 50.5px 60px
     max-width: 440px
@@ -24,6 +25,12 @@
     display: flex
     flex-direction: column
     gap: 15px
+
+  &_content
+    gap: 15px
+    display: flex
+    flex-direction: column
+
   &_group
     display: flex
     flex-direction: column
@@ -40,4 +47,7 @@
       &:hover
         text-decoration: underline
 
-
+.checkbox
+  display: flex
+  align-items: center
+  gap: 7px
