--- a/packages/frontend/src/app/components/auth-components/register-form/registerForm.module.sass
+++ b/packages/frontend/src/app/components/auth-components/register-form/registerForm.module.sass
@@ -7,7 +7,7 @@
   align-items: center
   gap: 15px
   padding: 50.5px 20px
-  width:360px 
+  width: 360px
   background: #FFFFFF
   border-radius: 10px
   @include mq("small")
@@ -24,11 +24,14 @@
     flex-direction: column
     gap: 15px
 
-  &_politics
+  &_content
+    gap: 15px
     display: flex
-    justify-content: space-between
-    font-size: 14px
-    line-height: 17px
+    flex-direction: column
+
+  &_group
+    display: flex
+    flex-direction: column
 
     & a
       color: $primary-black
@@ -36,4 +39,7 @@
       &:hover
         text-decoration: underline
 
-
+.checkbox
+  display: flex
+  align-items: center
+  gap: 7px
