--- a/packages/frontend/src/app/components/layout/layout.module.sass
+++ b/packages/frontend/src/app/components/layout/layout.module.sass
@@ -11,11 +11,10 @@
 
 .main
   display: flex
-  flex-grow: 1
   flex-direction: column
   align-items: center
-  height: 100%
+  justify-content: space-between
+  flex: 1
 
   @include mq("small")
-    padding-left: 128px 
-
+    padding-left: 128px
