--- a/packages/frontend/src/app/styles/reset.sass
+++ b/packages/frontend/src/app/styles/reset.sass
@@ -1,10 +1,10 @@
 @use "./variables" as *
 
-* 
+*
   margin: 0
   font-family: $typo, sans-serif
   box-sizing: border-box
-  
+
 body
   position: relative
   margin: 0
@@ -14,12 +14,12 @@ body
   @include mq("small")
     font-size: 14px
 
-#root 
+#root
   /* display: flex
    flex-grow: 1*/
   min-height: 100vh
 
-h1 
+h1
   font-size: 20px
 
 h2
@@ -29,11 +29,16 @@ h3
   font-size: 16px
 
 button
-  font-size: 18px 
-    
+  font-size: 18px
+
 .subtitle
   font-size: 12px
 
 .slogan
   font-size: 10px
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active
+  transition: background-color 5000s ease-in-out 0s
