--- a/packages/frontend/src/app/components/header/header.module.sass
+++ b/packages/frontend/src/app/components/header/header.module.sass
@@ -8,16 +8,17 @@
   align-items: center
   background: white
   @include mq("small")
-    max-width: 128px 
+    max-width: 128px
     border-top-right-radius: 1rem
     border-bottom-right-radius: 1rem
     display: inline-block
-    max-height: initial
+    max-height: 100vh
     position: fixed
-    top:0
+    top: 0
     left: 0
     height: 100vh
-  
+    padding-top: 34px
+
   &_logo_mobile
     height: 88px
     @include mq("small")
@@ -28,29 +29,34 @@
     @include mq("small")
       display: block
       height: 101px
-      margin-bottom:1.5rem
-
+      margin-bottom: 1.5rem
 
   &_navbar
     background: inherit
     max-width: 100%
-    height: 100% 
+    height: 100%
     padding-right: 2rem
 
     @include mq("small")
       padding-right: 0
-      
+
+    &_area
+      @include mq("small")
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        height: 100%
+        padding-bottom: 40px
+
     &_itemlist
       margin: 1rem
-      @include mq("small") 
-        margin:1rem 0
+      @include mq("small")
+        margin: 1rem 0
         padding: 0
         display: flex
         flex-direction: column
-        gap: 1rem
+        gap: 10px
     &_item
       margin: 1rem
       @include mq("small")
         margin: 0
-
-     
