--- a/packages/frontend/src/app/components/layout/layout.module.sass
+++ b/packages/frontend/src/app/components/layout/layout.module.sass
@@ -13,8 +13,12 @@
   display: flex
   flex-direction: column
   align-items: center
-  justify-content: space-between
-  flex: 1
+  /* justify-content: space-between
+  /*flex: 1
 
   @include mq("small")
     padding-left: 128px
+
+.fluid
+  justify-content: space-between
+  flex: 1
