--- a/packages/frontend/src/app/routes/login/login.module.sass
+++ b/packages/frontend/src/app/routes/login/login.module.sass
@@ -1,10 +1,15 @@
 @use "../../styles/variables" as *
 
-.home
+.login
   height: 100%
   width: 100%
   display: flex
+  flex-direction: column
   justify-content: center
   align-items: center
   flex: 1
+  gap: 25px
   padding: 1rem
+  @include mq("small")
+    flex-direction: row
+    gap: 20px
