--- a/packages/frontend/src/app/routes/register/register.module.sass
+++ b/packages/frontend/src/app/routes/register/register.module.sass
@@ -1,10 +1,9 @@
-@use "../../styles/variables" as *
 
-.home
+.register
   height: 100%
   width: 100%
   display: flex
+  flex-direction: column
   justify-content: center
   align-items: center
   flex: 1
-  padding: 1rem
