--- a/packages/frontend/src/app/ui/links/menu-list-item/menuListItem.module.sass
+++ b/packages/frontend/src/app/ui/links/menu-list-item/menuListItem.module.sass
@@ -1,6 +1,6 @@
 @use "../../../styles/variables" as *
 
-.menulist 
+.menulist
   text-decoration: none
   display: flex
   justify-content: right
@@ -12,7 +12,7 @@
 
   @include mq("small")
     justify-content: center
-  
+
   &_link
     color: black
     text-decoration: none
@@ -23,26 +23,43 @@
     width: 127px
     height: 32px
 
-    &:hover
-      background: $primary-blue
-      color: white
-      & .text
+    & .icon
+      display: flex
+      align-items: center
+      justify-content: center
+      border-radius: 50%
+      padding: 11.5px
+      box-shadow: inset 0px 2px 6px rgba(0, 0, 0, 0.2)
+
+      &.dark
+        background: $primary-black
         color: white
+
+      & img
+        width: 24px
+        height: 24px
+        object-fit: contain
+
+    &:hover
       & .icon
-        filter: invert(1)  
-    
+        background: $primary-blue
+        & img
+          filter: invert(1)
+      & .dark img
+        filter: none
+
     @include mq("small")
       flex-direction: column-reverse
       justify-content: center
       width: 128px
       height: 87px
 
-  &.fluid 
-    padding:0
+  &.fluid
+    padding: 0
     & .menulist_link
       width: 100%
       flex-grow: 1
-    
+
       @include mq("small")
         width: 100%
         flex-grow: 1
