GPB-57 change pass form ready

--- a/packages/frontend/src/app/styles/reset.sass
+++ b/packages/frontend/src/app/styles/reset.sass
@@ -42,3 +42,12 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active
   transition: background-color 5000s ease-in-out 0s
+
+.centeredPages
+  height: 100%
+  width: 100%
+  display: flex
+  justify-content: center
+  align-items: center
+  flex: 1
+  padding: 1rem
