--- a/packages/frontend/src/app/ui/inputs/pass-input/passInput.module.sass
+++ b/packages/frontend/src/app/ui/inputs/pass-input/passInput.module.sass
@@ -1,7 +1,7 @@
 @use "../../../styles/variables" as *
 
 $barSize: 40px
-$border-rounded:40px
+$border-rounded: 40px
 
 .pass
   background: white
@@ -14,18 +14,21 @@ $border-rounded:40px
   box-shadow: inset 0px 1px 4px rgba(0, 0, 0, 0.25)
   overflow: hidden
   padding-left: 1rem
-  
+
   &_icon
     border: none
     background: transparent
     width: 40px
     padding-right: 10px
     height: 100%
+    outline: none
+    &:hover
+      filter: hue-rotate(90deg)
     img
       width: 100%
       height: 100%
       object-fit: fill
-    
+
   &_input
     width: 100%
     border: none
@@ -35,5 +38,5 @@ $border-rounded:40px
       border: none
       outline: none
 
-.fluid 
-    width: 100%
+.fluid
+  width: 100%
