GPB-57 Auth components error msgs

--- a/packages/frontend/src/app/components/header/header.module.sass
+++ b/packages/frontend/src/app/components/header/header.module.sass
@@ -7,17 +7,13 @@
   justify-content: space-between
   align-items: center
   background: white
+
   @include mq("small")
     max-width: 128px
     border-top-right-radius: 1rem
     border-bottom-right-radius: 1rem
-    display: inline-block
-    max-height: 100vh
-    position: fixed
-    top: 0
-    left: 0
-    height: 100vh
-    padding-top: 34px
+    height: 100%
+    max-height: initial
 
   &_logo_mobile
     height: 88px
