--- a/packages/frontend/src/app/components/auth-components/register-form/registerForm.module.sass
+++ b/packages/frontend/src/app/components/auth-components/register-form/registerForm.module.sass
@@ -10,6 +10,7 @@
   width: 360px
   background: #FFFFFF
   border-radius: 10px
+  color: black
   @include mq("small")
     padding: 50.5px 60px
     max-width: 440px
