--- a/packages/frontend/src/app/components/layout/layout.module.sass
+++ b/packages/frontend/src/app/components/layout/layout.module.sass
@@ -8,6 +8,17 @@
   height: 100%
   background: $primary-black
   min-width: 390px
+  position: relative
+  width: 100%
+
+.header
+  @include mq("small")
+    position: fixed
+    top: 0
+    left: 0
+    height: 100vh
+    padding-top: 34px
+    max-height: 100vh
 
 .main
   display: flex
