--- a/packages/frontend/src/app/styles/reset.sass
+++ b/packages/frontend/src/app/styles/reset.sass
@@ -47,8 +47,11 @@ input:-webkit-autofill:active
   height: 100%
   width: 100%
   display: flex
+  flex-direction: column
   justify-content: center
   align-items: center
   flex: 1
   padding: 1rem
   gap: 20px
+  @include mq("small")
+    flex-direction: row
