--- a/packages/frontend/src/app/ui/buttons/basicButton/basicButton.module.sass
+++ b/packages/frontend/src/app/ui/buttons/basicButton/basicButton.module.sass
@@ -1,4 +1,4 @@
-@use "../../../ui/styles/variables" as *
+@use "../../styles/variables" as *
 
 .button
   display: flex
@@ -13,7 +13,7 @@
   background: $triarty-white
   color: $greyscale-black
   gap: 10px
-  @inlcude BorderRadius("medium")
+  @include BorderRadius("medium")
 
   &:hover
     background: $triarty-hover
