--- a/packages/frontend/src/app/ui/styles/variables.sass
+++ b/packages/frontend/src/app/ui/styles/variables.sass
@@ -144,6 +144,9 @@ $breakpoints: (mobile: 360px, mobilePerfectPixel: 375px, tablet: 768px, smallDes
 @mixin Shadow
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.101025)
 
+@mixin ShadowInput
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25) inset
+
 @mixin MenuButtonShadow
   box-shadow: inset 0px 2px 6px rgba(0, 0, 0, 0.2)
 /* Border Radius */
