GPB-57 dropdown button behaviour

--- a/packages/frontend/src/app/ui/buttons/slip-button/slipButton.module.sass
+++ b/packages/frontend/src/app/ui/buttons/slip-button/slipButton.module.sass
@@ -57,6 +57,8 @@
         top: 2.5rem
         background: white
         z-index: 3
+        max-height: 500px
+        overflow-y: scroll
 
         ul
             padding: 0
