--- a/packages/frontend/src/app/components/header/header.module.sass
+++ b/packages/frontend/src/app/components/header/header.module.sass
@@ -61,9 +61,9 @@
         flex-direction: column
         gap: 10px
 
-    &_item
-      margin: 1rem 0
-      padding: 1rem 0
+    &_item span
+      color: $color-blackish
+      background: $triarty-white
 
       @include mq("tablet")
         margin: 0
