--- a/packages/frontend/src/app/components/layout/layout.module.sass
+++ b/packages/frontend/src/app/components/layout/layout.module.sass
@@ -24,6 +24,7 @@
   display: flex
   flex-direction: column
   align-items: center
+  flex-grow: 1
 
   @include mq("tablet")
     padding-left: 128px
