--- a/packages/frontend/src/app/ui/layouts/layout-card-form/layoutCardForm.module.sass
+++ b/packages/frontend/src/app/ui/layouts/layout-card-form/layoutCardForm.module.sass
@@ -10,7 +10,7 @@
   width: 360px
   background: $triarty-white
   border-radius: 10px
-  @include mq("mobile")
+  @include mq("mobilePerfectPixel")
     padding: 50.5px 60px
     max-width: 440px
     min-width: 360px
