--- a/packages/frontend/src/app/ui/links/basicLink/basicLink.module.sass
+++ b/packages/frontend/src/app/ui/links/basicLink/basicLink.module.sass
@@ -22,3 +22,10 @@
 
 .disabled
   opacity: 0.5
+
+.dark
+  color: $triarty-white
+  &:hover
+    color: $triarty-hover
+    span
+      border-bottom: 1px solid $triarty-hover
