--- a/packages/frontend/src/app/components/header/header.module.sass
+++ b/packages/frontend/src/app/components/header/header.module.sass
@@ -17,6 +17,7 @@
 
   &_logo_mobile
     height: 88px
+    flex-grow: 1
     @include mq("tablet")
       display: none
 
@@ -50,8 +51,12 @@
       display: flex
       flex-direction: column
       justify-content: start
-      padding: 0 1rem
+      padding: 0 1em
       max-width: 100%
+      margin: 0
+
+      & button
+        margin: 0.5rem 0
 
       @include mq("tablet")
         margin: 1rem 0
