--- a/packages/frontend/src/app/components/layout/layout.module.sass
+++ b/packages/frontend/src/app/components/layout/layout.module.sass
@@ -6,7 +6,11 @@
   flex-flow: column nowrap
   min-height: 100vh
   height: 100%
-  background: $primary-dark
+  background: linear-gradient(rgba(1, 25, 61,0.90) 0%, rgba(1, 25, 61, 0.90) 100%), url(#{$background})
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: 50%
+  background-color: lightgray
   min-width: 390px
   position: relative
   width: 100%
