--- a/packages/frontend/src/app/ui/layouts/menu-navbar-collapse/menu-navbarCollapse.module.sass
+++ b/packages/frontend/src/app/ui/layouts/menu-navbar-collapse/menu-navbarCollapse.module.sass
@@ -27,9 +27,8 @@
     top: 0
     position: fixed
     justify-content: right
-    height: 100vh
     right: 0
-    width: 50vw
+    bottom: 0
     border-bottom-right-radius: 1rem
     border-top-right-radius: 1rem
     background: $triarty-white
@@ -48,6 +47,7 @@
       display: flex
       flex-direction: column
       background: transparent
+      height: 100%
 
     &__open
       display: flex
