--- a/packages/frontend/src/app/ui/layouts/suggestions/suggestions.module.sass
+++ b/packages/frontend/src/app/ui/layouts/suggestions/suggestions.module.sass
@@ -18,13 +18,8 @@
     border-bottom-right-radius: 1rem
     padding-bottom: 0.5rem
 
-  img
-    vertical-align: middle
-    padding-left: 0.75em
-    width: 3rem
-
   span
-    padding: 0.75em 0.5em 0.75em 1.5em
+    padding: 0.75em 0.5em
 
 .icon
   vertical-align: middle
