--- a/packages/frontend/src/app/ui/styles/reset.sass
+++ b/packages/frontend/src/app/ui/styles/reset.sass
@@ -364,10 +364,39 @@ input:-webkit-autofill:active
   justify-content: center
   align-items: center
   flex: 1
-  padding: 1rem
   gap: 20px
-  @include mq("small")
+  @include mq("tablet")
     flex-direction: row
+
+  .column
+    height: 100%
+    width: 100%
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    flex: 1
+    gap: 20px
+  @include mq("tablet")
+    flex-direction: column
 
   .centered
     text-align: center
+
+/* Works on Firefox */
+*
+  scrollbar-width: thin
+  scrollbar-color: $primary #ccc
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar
+  width: 12px
+
+*::-webkit-scrollbar-track
+  background: #ccc
+  border-bottom-right-radius: 20px
+
+*::-webkit-scrollbar-thumb
+  background-color: $primary
+  border-radius: 20px
+  border: 3px solid #ccc
