GPB-57 Reaction Panel

--- a/packages/frontend/src/app/ui/fields/fieldstates.module.sass
+++ b/packages/frontend/src/app/ui/fields/fieldstates.module.sass
@@ -5,5 +5,12 @@
 
 .success
     border: 1px solid $positive
+
 .disabled
     opacity: 0.5
+
+.content
+    display: flex
+    gap: 0.5rem
+    color: $triarty-white
+    align-items: center
