gpb-57 Storybook improvment

--- a/packages/frontend/src/app/ui/inputs/search-bar/searchbar.module.sass
+++ b/packages/frontend/src/app/ui/inputs/search-bar/searchbar.module.sass
@@ -8,6 +8,7 @@ $border-rounded: 20px
   height: $barSize
   border: none
   @include ShadowInput
+  @include BorderRadius("big")
 
   form
     display: flex
