Fixed and Added stories

--- a/packages/frontend/src/app/ui/avatar/avatar.module.sass
+++ b/packages/frontend/src/app/ui/avatar/avatar.module.sass
@@ -9,6 +9,8 @@
   width: 100%
   height: 100%
   object-fit: cover
+  aspect-ratio: 1 / 1
+  object-position: center
 
 .rounded
   border-radius: 50%
