--- a/packages/frontend/src/app/ui/footer/footer.module.sass
+++ b/packages/frontend/src/app/ui/footer/footer.module.sass
@@ -8,6 +8,7 @@
 	background: $triarty-white
 	display: flex
 	justify-content: space-around
-	@include mq("medium")
+	color: "black"
+	@include mq("mobile")
 		width: 90%
 		border-radius: 1rem
