--- a/packages/frontend/src/app/ui/styles/reset.sass
+++ b/packages/frontend/src/app/ui/styles/reset.sass
@@ -365,7 +365,7 @@ input:-webkit-autofill:active
   align-items: center
   flex: 1
   gap: 20px
-  @include mq("tablet")
+  @include mq("mobile")
     flex-direction: row
 
   .column
@@ -377,7 +377,7 @@ input:-webkit-autofill:active
     align-items: center
     flex: 1
     gap: 20px
-  @include mq("tablet")
+  @include mq("mobile")
     flex-direction: column
 
   .centered
