--- a/packages/frontend/src/app/ui/bars/stepper-bar/stepperBar.module.sass
+++ b/packages/frontend/src/app/ui/bars/stepper-bar/stepperBar.module.sass
@@ -12,22 +12,26 @@
   flex-flow: row nowrap
   align-items: center
   color: $triarty-white
-  position: relative
-  /**gap: 4rem
   height: 24px
+
+// give a width so the space will remain once the back selector is gone
+.backContainer
+  width: 8rem
+// give a width so the space will remain once the next selector is gone
+.nextContainer
+  width: 10rem
 
 .back, .next
   display: flex
   flex-flow: row nowrap
   gap: 0.5rem
   align-items: center
-  position: absolute
 
 .back
-  right: calc(100% + 4rem)
+  margin-right: 4rem
 
 .next
-  left: calc(100% + 4rem)
+  margin-left: 4rem
 
   &:hover
     @include NormalBold
